@@ -81,36 +81,31 @@ public class FileBasedSslContextFactoryTest
     }
 
     /**
-     * Tests for empty {@code keystore_password} and empty {@code outbound_keystore_password} configurations.
+     * Tests that empty {@code keystore_password} is allowed.
      */
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void testEmptyKeystorePasswords() throws SSLException
     {
-        EncryptionOptions.ServerEncryptionOptions localEncryptionOptions = encryptionOptions.withKeyStorePassword(null);
+        EncryptionOptions.ServerEncryptionOptions localEncryptionOptions = encryptionOptions
+                                                                           .withKeyStorePassword("")
+                                                                           .withKeyStore("test/conf/cassandra_ssl_test_nopassword.keystore");
 
         Assert.assertEquals("org.apache.cassandra.security.FileBasedSslContextFactoryTest$TestFileBasedSSLContextFactory",
                             localEncryptionOptions.ssl_context_factory.class_name);
-        Assert.assertNull("keystore_password must be null", localEncryptionOptions.keystore_password);
+        Assert.assertEquals("keystore_password must be empty", "", localEncryptionOptions.keystore_password);
 
         TestFileBasedSSLContextFactory sslContextFactory =
         (TestFileBasedSSLContextFactory) localEncryptionOptions.sslContextFactoryInstance;
-        try
-        {
-            sslContextFactory.buildKeyManagerFactory();
-            sslContextFactory.buildTrustManagerFactory();
-        }
-        catch (Exception e)
-        {
-            Assert.assertEquals("'keystore_password' must be specified", e.getMessage());
-            throw e;
-        }
+
+        sslContextFactory.buildKeyManagerFactory();
+        sslContextFactory.buildTrustManagerFactory();
     }
 
     /**
-     * Tests for the empty password for the {@code keystore} used for the client communication.
+     * Tests that an absent keystore_password for the {@code keystore} is disallowed.
      */
     @Test(expected = IllegalArgumentException.class)
-    public void testEmptyKeystorePassword() throws SSLException
+    public void testNullKeystorePasswordDisallowed() throws SSLException
     {
         EncryptionOptions.ServerEncryptionOptions localEncryptionOptions = encryptionOptions.withKeyStorePassword(null);
 
